src/snapshots/afrotd__parser__tests__interpretation_6.4.1_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 4
  - 1
index: 6
text: "B25 steht an der B-35 in Position zum Fangen eines Punts.\nWährend sich der Ball in der Luft befindet, läuft A88 sehr nah an B25\nseitlich vorbei, so dass B25 seine Position verändern muss, um den Kick\nzu fangen. A88 berührt B25 nicht und betritt auch nicht die 1-Meterzone\ndirekt vor B25."
ruling: "Foul von A88, Behinderung beim Fangen eines Kicks, 15-Meterstrafe vom Punkt des Fouls. Auch wenn B25 in der\nLage ist, den Kick zu fangen, verdrängt A88 ihn mit seiner Aktion von\nseiner ursprünglichen Position und behindert dadurch die Möglichkeit\nzum Fangen."
