src/snapshots/afrotd__parser__tests__interpretation_6.4.1_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 4
  - 1
index: 7
text: "B10 gibt ein Fair Catch-Signal, mufft den Ball und fängt ihn\nanschließend."
ruling: "Wenn B10 die Möglichkeit zum Fangen des\nKicks nach seinem Muff hat, darf er nicht beim Fangen behindert werden. Wenn B10 den gemufften Kick fängt, wird der Ball am Punkt von\nB10’s erster Berührung dead."
