src/snapshots/afrotd__parser__tests__interpretation_6.5.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 1
index: 1
text: "Nach einem gültigen oder ungültigen Signal mufft B1 den Punt\nund B2, der nicht signalisierte, fängt den Ball nach dem Kick."
ruling: "Der Ball wird dead, als er von B2 gefangen wird. Er wird anschließend an den Punkt der ersten Berührung durch B1 platziert."
