src/snapshots/afrotd__parser__tests__interpretation_6.5.1_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 1
index: 3
text: "Während eines Free Kicks gibt B21 an der B-5 ein gültiges Fair\nCatch Signal. B21 mufft den Kick und recovert den Ball sofort an der\nB-5."
ruling: "Kein vollständiger Fair Catch. B’s Ball, 1. und 10 von\nder B-5."
