src/snapshots/afrotd__parser__tests__interpretation_6.5.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 2
index: 1
text: "B1 macht ein Fair Catch-Signal vor dem Muff von B2. Danach\nfängt oder recovert B1 den Ball und advanct ihn."
ruling: "Durch B1’s\nSignal ist der Ball dead, sobald er gefangen oder recovert wird. Zwei\nSchritte sind B1 erlaubt, damit dieser zum Stillstand kommt oder seine Balance wiedererlangen kann. Ein dritter oder jeder weitere Schritt\nist illegal. Die Strafe wird vom Punkt des Fangens oder der Recovery\ngeahndet. Wenn B1 getackelt wird, dann wird dieses Tackling nicht geahndet, es sei denn, es handelt sich um einen Forcible Contact oder es\nereignet sich so spät, dass der Tackler wissen konnte, dass es nicht in\nder Absicht lag, Raumgewinn zu erzielen. Wenn der Kick in der Endzone gefangen oder recovert wird, ist das ein Touchback. Wird B1 getackelt, bevor er einen dritten Schritt macht, hat nur der Tackler gefoult."
