src/snapshots/afrotd__parser__tests__interpretation_6.5.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 2
index: 3
text: "Punt Receiver B22 macht ein ungültiges Signal, indem er eine Hand nur kurz nach oben reckt. Er fängt den Ball an der B-35 und\nsprintet bis zu der B-40, wo er getackelt wird."
ruling: "Der Ball ist\nam Punkt des Fangens dead. Foul, Spielverzögerung durch B22. 5Meterstrafe vom Dead Ball Spot. Kein Foul durch den Tackler, da B22\ndeutlich als Ballträger fungierte. B’s Ball, 1. und 10 von der B-30."
