src/snapshots/afrotd__parser__tests__interpretation_6.5.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 3
index: 1
text: "A1 oder B1 zeigt jenseits der neutralen Zone einen Fair Catch\nan, während der Kick nicht die neutrale Zone überquert."
ruling: "Alle Signale durch Team A werden ignoriert. Team B darf kein Fair\nCatch-Signal geben, da der Ball die neutrale Zone nicht überquert. Der\nBall wird jedoch dead, sobald er gefangen oder recovert wird (Regeln\n2.8.1.a und 4.1.3.g)"
